Contest ad aligns left (not right, and nor is it inline). Also fixes some padding/margins.

--- a/themes/greatermedia/assets/css/sass/components/_contests.scss
+++ b/themes/greatermedia/assets/css/sass/components/_contests.scss
@@ -235,6 +235,14 @@
 }
 
 .contest__form {
+
+	// These two declarations work together for consistent bottom margins
+	margin-bottom: 60px;
+	p.submit {
+		margin-bottom: 0;
+	}
+
+
 	fieldset {
 		legend,
 		label {
